--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,7 +1,7 @@
 /*---------Home Page-----------*/
 
 body {
-  height: 95vh;
+  height: 100vh;
 }
 #home-page {
   background: url("./../images/yellowbg.png");
@@ -78,13 +78,10 @@ body {
   overflow: hidden;
   border-right: 3px solid;
   white-space: nowrap;
-  /* border-right: .15em solid transparent; */
-  /* font-family: monospace; */
   font-size: 2.3vw;
   z-index: 2200;
   position: absolute;
-  /* left: 9.3vw;  */
-  top: 9.5vw;
+  top: 10vw;
   text-align: center;
   opacity: 0;
 }
@@ -170,7 +167,7 @@ body {
     font-size: 4vw;
     z-index: 2200;
     position: absolute;
-    top: 15vw;
+    top: 17vw;
     text-align: center;
     opacity: 0;
   }
